--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,11 +1,10 @@
-body,html {   width: 100%;
+body,html {  width: 100%;
     height: 100%;
     margin: 0;
-    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #000; }
+ }
     #unity-container {
         position: absolute;
         top: 0;
