--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,9 +1,4 @@
-body,html {  width: 100%;
-    height: 100%;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+body {  padding: 0;margin: 0;
  }
     #unity-container {
         position: absolute;
@@ -13,9 +8,6 @@ body,html {  width: 100%;
         height: 100%;
       }
       
-      #unity-container {
-        display: none;
-      }
 #unity-canvas { background: #231F20 }
 #unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
 #unity-logo { width: 154px; height: 130px; background: url('unity-logo-dark.png') no-repeat center }
