--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -8,7 +8,7 @@ body {  padding: 0;margin: 0;
        height: 100%;
      }
      
-#unity-canvas { background: #dda2c0 }
+#unity-canvas { background: #ffde6b }
 #unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
 #unity-logo { width: 154px; height: 130px; background: url('unity-logo-light.png') no-repeat center;display: none; }
 #unity-progress-bar-empty { width: 141px; height: 18px; margin-top: 10px; margin-left: 6.5px; background: url('progress-bar-empty-light.png') no-repeat center }
