--- a/TemplateData/loadingStyle.css
+++ b/TemplateData/loadingStyle.css
@@ -7,11 +7,13 @@ body {
   overflow: hidden;
 }
 #loadcontainer{
+  position: absolute;
   background-color: #ffde6b;
   height: 100vh;
   width: 100vw;
   z-index: 1000;
-  overflow: hidden;
+  margin: 0 auto;
+  top: 0;
 }
 
 h1 {
