--- a/TemplateData/loadingStyle.css
+++ b/TemplateData/loadingStyle.css
@@ -14,6 +14,12 @@ body {
   z-index: 1000;
   margin: 0 auto;
   top: 0;
+  transition: opacity 0.2s ease-in-out;
+  opacity: 1;
+}
+
+#loadcontainer.fade-out {
+  opacity: 0;
 }
 
 h1 {
