--- a/TemplateData/loadingStyle.css
+++ b/TemplateData/loadingStyle.css
@@ -1,18 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC');
-element {
-  --main-bg-color: #ffde6b;
-  --rest-color: #f6f6f6;
-}
 
 body {
-  background-color: var(--main-bg-color);
+  background-color: #4492f4;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
 }
 #loadcontainer{
   position: absolute;
-  background-color: var(--main-bg-color);
+  background-color: #4492f4;
   height: 100vh;
   width: 100vw;
   z-index: 1000;
@@ -34,7 +30,7 @@ h1 {
   text-align: center;
   font-family: 'Amatic SC';
   font-size: 6vh;
-  color: var(--rest-color);
+  color: #f6f6f6;
   opacity: .75;
   z-index: 1000;
   animation: pulse 2.5s linear infinite;
@@ -56,7 +52,7 @@ h1 {
 #cooking .bubble {
   position: absolute;
   border-radius: 100%;
-  box-shadow: 0 0 .25vh rgba(240, 240, 240, 0.1);
+  box-shadow: 0 0 .25vh rgba(238, 238, 238, 0.1);
   opacity: 0;
 }
 
@@ -65,7 +61,7 @@ h1 {
   left: 58%;
   width: 2.5vh;
   height: 2.5vh;
-  background-color: rgba(240, 240, 240, 0.93);
+  background-color: rgba(238, 238, 238, 0.93);
   animation: bubble 2s cubic-bezier(.53, .16, .39, .96) infinite;
 }
 
@@ -74,7 +70,7 @@ h1 {
   left: 52%;
   width: 2vh;
   height: 2vh;
-  background-color: rgba(240, 240, 240, 0.97);
+  background-color: rgba(238, 238, 238, 0.97);
   animation: bubble 2s ease-in-out .35s infinite;
 }
 
@@ -83,7 +79,7 @@ h1 {
   left: 50%;
   width: 1.5vh;
   height: 1.5vh;
-  background-color: var(--rest-color);
+  background-color: #f6f6f6;
   animation: bubble 1.5s cubic-bezier(.53, .16, .39, .96) .55s infinite;
 }
 
@@ -92,7 +88,7 @@ h1 {
   left: 56%;
   width: 1.2vh;
   height: 1.2vh;
-  background-color: var(--rest-color);
+  background-color: #f6f6f6;
   animation: bubble 1.8s cubic-bezier(.53, .16, .39, .96) .9s infinite;
 }
 
@@ -101,7 +97,7 @@ h1 {
   left: 63%;
   width: 1.1vh;
   height: 1.1vh;
-  background-color: var(--rest-color);
+  background-color: #f6f6f6;
   animation: bubble 1.6s ease-in-out 1s infinite;
 }
 
@@ -131,7 +127,7 @@ h1 {
   width: 35%;
   height: 20%;
   background-color: transparent;
-  border-top: 1vh solid var(--rest-color);
+  border-top: 1vh solid #f6f6f6;
   border-left: 1vh solid transparent;
   border-radius: 100%;
   transform: rotate(20deg) rotateX(0deg) scale(1.3, .9);
@@ -143,7 +139,7 @@ h1 {
   right: 30%;
   width: 50%;
   height: 8%;
-  background-color: var(--rest-color);
+  background-color: #f6f6f6;
   border-radius: 0 0 1.4em 1.4em;
   transform-origin: -15% 0;
 }
@@ -163,8 +159,8 @@ h1 {
   right: 37%;
   width: 40%;
   height: 45%;
-  background-color: var(--rest-color);
-  box-shadow: 0 0 3px 0 var(--rest-color);
+  background-color: #f6f6f6;
+  box-shadow: 0 0 3px 0 #f6f6f6;
   border-radius: 100%;
   transform-origin: -20% 0;
   animation: fly 2.1s ease-in-out infinite;
