--- a/TemplateData/loadingStyle.css
+++ b/TemplateData/loadingStyle.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC');
 
 body {
-  background-color: #4492f4;
+  background-color: #ffde6b;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
 }
 #loadcontainer{
   position: absolute;
-  background-color: #4492f4;
+  background-color: #ffde6b;
   height: 100vh;
   width: 100vw;
   z-index: 1000;
@@ -30,7 +30,7 @@ h1 {
   text-align: center;
   font-family: 'Amatic SC';
   font-size: 6vh;
-  color: #f6f6f6;
+  color: #333;
   opacity: .75;
   z-index: 1000;
   animation: pulse 2.5s linear infinite;
@@ -52,7 +52,7 @@ h1 {
 #cooking .bubble {
   position: absolute;
   border-radius: 100%;
-  box-shadow: 0 0 .25vh rgba(238, 238, 238, 0.1);
+  box-shadow: 0 0 .25vh rgba(51, 51, 51, 0.1);
   opacity: 0;
 }
 
@@ -61,7 +61,7 @@ h1 {
   left: 58%;
   width: 2.5vh;
   height: 2.5vh;
-  background-color: rgba(238, 238, 238, 0.93);
+  background-color: rgba(51, 51, 51, 0.93);
   animation: bubble 2s cubic-bezier(.53, .16, .39, .96) infinite;
 }
 
@@ -70,7 +70,7 @@ h1 {
   left: 52%;
   width: 2vh;
   height: 2vh;
-  background-color: rgba(238, 238, 238, 0.97);
+  background-color: rgba(51, 51, 51, 0.97);
   animation: bubble 2s ease-in-out .35s infinite;
 }
 
@@ -79,7 +79,7 @@ h1 {
   left: 50%;
   width: 1.5vh;
   height: 1.5vh;
-  background-color: #f6f6f6;
+  background-color: #333;
   animation: bubble 1.5s cubic-bezier(.53, .16, .39, .96) .55s infinite;
 }
 
@@ -88,7 +88,7 @@ h1 {
   left: 56%;
   width: 1.2vh;
   height: 1.2vh;
-  background-color: #f6f6f6;
+  background-color: #2e2e2e;
   animation: bubble 1.8s cubic-bezier(.53, .16, .39, .96) .9s infinite;
 }
 
@@ -97,7 +97,7 @@ h1 {
   left: 63%;
   width: 1.1vh;
   height: 1.1vh;
-  background-color: #f6f6f6;
+  background-color: #292929;
   animation: bubble 1.6s ease-in-out 1s infinite;
 }
 
@@ -127,7 +127,7 @@ h1 {
   width: 35%;
   height: 20%;
   background-color: transparent;
-  border-top: 1vh solid #f6f6f6;
+  border-top: 1vh solid #333;
   border-left: 1vh solid transparent;
   border-radius: 100%;
   transform: rotate(20deg) rotateX(0deg) scale(1.3, .9);
@@ -139,7 +139,7 @@ h1 {
   right: 30%;
   width: 50%;
   height: 8%;
-  background-color: #f6f6f6;
+  background-color: #333;
   border-radius: 0 0 1.4em 1.4em;
   transform-origin: -15% 0;
 }
@@ -159,8 +159,8 @@ h1 {
   right: 37%;
   width: 40%;
   height: 45%;
-  background-color: #f6f6f6;
-  box-shadow: 0 0 3px 0 #f6f6f6;
+  background-color: #333;
+  box-shadow: 0 0 3px 0 #333;
   border-radius: 100%;
   transform-origin: -20% 0;
   animation: fly 2.1s ease-in-out infinite;
