--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -20,9 +20,7 @@ body {  padding: 0;margin: 0;
 #unity-fullscreen-button { cursor:pointer; float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
 #unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
 #mobileOnlyScreen{
-  position:fixed;
-  top: 0;
-  left: 0;
+  position:absolute;
   width: 100%;
   height: 100%;
   z-index:10000;
