--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -21,6 +21,8 @@ body {  padding: 0;margin: 0;
 #unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
 #mobileOnlyScreen{
   position:absolute;
+  width: 600px;
+  height: 900px;
   z-index:10000;
   display: none;
   background: url('mobileOnly.jpeg')
