--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -18,11 +18,11 @@ body {  padding: 0;margin: 0;
 #unity-webgl-logo { float:left; width: 204px; height: 38px; background: url('webgl-logo.png') no-repeat center }
 #unity-build-title { float: right; margin-right: 10px; line-height: 38px; font-family: arial; font-size: 18px }
 #unity-fullscreen-button { cursor:pointer; float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
-#unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
+#unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display:none }
 #mobileOnlyScreen{
   position:absolute;
-  width: 200px;
-  height: 600px;
+  width: 100vh;
+  height: 100vh;
   z-index:10000;
   display: none;
   background: url('mobileOnly.jpeg')
