--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -21,9 +21,9 @@ body {  padding: 0;margin: 0;
 #unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display:none }
 #mobileOnlyScreen{
   position:absolute;
-  width: 100vh;
-  height: 100vh;
-  z-index:10000;
-  display: none;
-  background: url('mobileOnly.jpeg')
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; /* Чтобы скрыть часть изображения, если оно выходит за границы */
 }
