--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -21,6 +21,11 @@ body {  padding: 0;margin: 0;
 #unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display:none }
 #mobileOnlyScreen{
   position:absolute;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
+  overflow: hidden; /* Чтобы скрыть часть изображения, если оно выходит за границы */
+  z-index: 10000;
+  display: none;
 }
