--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -20,12 +20,21 @@ body {  padding: 0;margin: 0;
 #unity-fullscreen-button { cursor:pointer; float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
 #unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display:none }
 #mobileOnlyScreen{
-  position:absolute;
+  display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
   overflow: hidden; /* Чтобы скрыть часть изображения, если оно выходит за границы */
+  position: relative;
   z-index: 10000;
   display: none;
+}
+#mobileOnlyScreen img {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  display: block;
+  object-fit: contain; /* Или object-fit: cover; если хотите, чтобы изображение занимало весь контейнер, но могло обрезаться */
 }
