--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -24,7 +24,6 @@ body {  padding: 0;margin: 0;
   align-items: center;
   width: 100%;
   height: 100%;
-  overflow: hidden; /* Чтобы скрыть часть изображения, если оно выходит за границы */
   position: relative;
   z-index: 10000;
   display: none;
@@ -32,8 +31,8 @@ body {  padding: 0;margin: 0;
 #mobileOnlyScreen img {
   max-width: 100%;
   max-height: 100%;
-  width: 100%;
+  width: auto;
   height: auto;
   display: block;
-  object-fit: contain; /* Или object-fit: cover; если хотите, чтобы изображение занимало весь контейнер, но могло обрезаться */
+  object-fit: cover /* Или object-fit: cover; если хотите, чтобы изображение занимало весь контейнер, но могло обрезаться */
 }
