--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -24,9 +24,11 @@ body {  padding: 0;margin: 0;
   align-items: center;
   width: 100%;
   height: 100%;
+  overflow: hidden; /* Чтобы скрыть часть изображения, если оно выходит за границы */
   position: relative;
   z-index: 10000;
   display: none;
+  background-color: #43e3f9;
 }
 #mobileOnlyScreen img {
   max-width: 100%;
@@ -34,5 +36,5 @@ body {  padding: 0;margin: 0;
   width: auto;
   height: auto;
   display: block;
-  object-fit: cover /* Или object-fit: cover; если хотите, чтобы изображение занимало весь контейнер, но могло обрезаться */
+  object-fit: contain; /* Или object-fit: cover; если хотите, чтобы изображение занимало весь контейнер, но могло обрезаться */
 }
