--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -28,7 +28,8 @@ body {  padding: 0;margin: 0;
   position: relative;
   z-index: 10000;
   display: none;
-  background-color: #43e3f9;
+  
+  background: linear-gradient(180deg, #4dcdfb, #1ba5db);
 }
 #mobileOnlyScreen img {
   max-width: 100%;
