feat:update size of texture image

--- a/TemplateData/loadingStyle.css
+++ b/TemplateData/loadingStyle.css
@@ -14,7 +14,7 @@ body {
   top: 0;
   transition: opacity 0.2s ease-in-out;
   opacity: 1;
-  background-image: url("kitchen-background.png");
+  background-image: url("kitchen-background.jpg");
   background-repeat: repeat;
 }
 
