--- a/TemplateData/loadingStyle.css
+++ b/TemplateData/loadingStyle.css
@@ -303,7 +303,7 @@ h2.special {
   justify-content: center;
   height: 100vh;
   width: 400vw;
-  background-color: white;
+  background-color: #f4ece3;
   transition: all 0.5s ease-out;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -316,7 +316,7 @@ h2.special {
   top: 0;
   height: 100vh;
   width: 100vw;
-  background-image: url("kitchen-background.png");
+  background-image: url("kitchen-background.jpg");
   background-repeat: repeat;
   content: "";
   opacity: 0.55;
